# stm32h7-renode-reference-platform-zephyr

./: .ci.yml  .editorconfig  .gitignore  README.md  west.yml
boards/antmicro/stm32h7_renode_reference_board/: board.cmake  board.yml  stm32h7_renode_reference_board.dts  stm32h7_renode_reference_board.yaml
boards/antmicro/stm32h7_renode_reference_board/support/: stm32h7_renode_reference_board.repl  stm32h7_renode_reference_board.resc
demo/: CMakeLists.txt  Kconfig  prj.conf
demo/boards/: stm32h7_renode_reference_board.overlay
demo/src/: flash_store.c  potentiometer.c  usbdev.c
